# guess_number

./: .gitignore  pyproject.toml
app/: main.py
app/.streamlit/: config.toml
app/model/: __init__.py  model.py
app/models/: 01_pytorch_guess_numbers_model_I.pth
